--- a/_site.yml
+++ b/_site.yml
@@ -1,14 +1,18 @@
 name: "R Story"
 output_dir: "."
 navbar:
-  title: "Home"
+  title: "R Story"
   left:
-    - text: "About"
-      href: index.html
     - text: "Pilot Community Recruitment"
       href: pilot.html
     - text: "Meet the Team"
       href: about_team.html
+  right:
+    - icon: fa-linkedin 
+      href: https://www.linkedin.com/company/rstorytool
+    - icon: fa-instagram 
+      href: https://www.instagram.com/rstorytool/
+      
 output:
   html_document:
     code_folding: hide
